Update styles, fix scrollbar

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -5,7 +5,6 @@
   .content-wrapper {
     height: 100%;
     max-height: 100%;
-    overflow-y: scroll;
     flex-grow: 1;
     padding-left: 80px;
 
