--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1,10 +1,28 @@
 .profile-page {
   height: 100%;
   padding: 25px 50px;
-  overflow: scroll;
+  overflow-y: auto;
+
+  @include media-breakpoint-down(sm) {
+    padding: 25px 35px;
+  }
+
+  @include media-breakpoint-down(xs) {
+    padding: 25px 15px;
+  }
 
   input {
     font-size: 14px;
+  }
+
+  h1 {
+    @include media-breakpoint-down(sm) {
+      font-size: 32px;
+    }
+
+    @include media-breakpoint-down(xs) {
+      font-size: 24px;
+    }
   }
 
   .change-password-form {
